# evalstats

./: .codacy.yml  .gitignore  LICENSE  README.md  SOURCES.txt  pyproject.toml  setup.py
.github/workflows/: python.yml
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/API/: modules.rst
evalstats/: __init__.py  __main__.py  evalstats.py
notebooks/: optimization.ipynb
